# drevalis-desktop

./: .editorconfig  .gitattributes  .gitignore  BRIEF.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOTCHAS.md  LICENSE  README.md  SCOPE.md  SECURITY.md  START_HERE.md  alembic.ini  checkthis.txt  drevalis-backend.spec  pyproject.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  release-linux.yml  release-macos.yml  release.yml
.tauri-keys/: drevalis-updater.key.pub
_source-reference/: .env.example  CHANGELOG.md  CLAUDE.md  README.md
docs/: content-quality-audit.md  content-quality-before-after.md  editor-audit.md  release-checklist.md  sentry-release-tagging-audit.md  ui-inventory.md
docs/adr/: 0001-async-job-queue-arq.md  0002-ffmpeg-direct-subprocess.md  0003-filesystem-storage-with-db-paths.md  0004-tts-protocol-abstraction.md  0005-llm-protocol-abstraction.md  README.md
docs/decisions/: 001-channels-hub.md  002-editor-nle-rebuild.md  003-editor-media-cutover.md
docs/frontend/: design-system.md
docs/goals/: release-1.0.md
docs/goals/phases/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
docs/ops/: releasing.md  runbook.md  smb-storage.md  techdebt.md
docs/security/: 2026-03-fixes.md  2026-04-fixes.md  websocket-token-logging.md
docs/setup/: billing.md  seo-and-analytics.md
frontend/: index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/public/: splashscreen.html
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ActivityMonitor.tsx  CommandPalette.test.tsx  CommandPalette.tsx  DemoBanner.tsx  ErrorBoundary.tsx  LicenseGate.tsx  LoginGate.tsx  SetupChecklist.tsx  ShortcutOverlay.test.tsx  ShortcutOverlay.tsx  SystemHealthCard.test.tsx  SystemHealthCard.tsx  TierGatePlaceholder.test.tsx  TierGatePlaceholder.tsx  UpdateAvailableBanner.tsx  UpdateProgressOverlay.tsx
frontend/src/hooks/: useDocumentTitle.ts  useUnsavedWarning.ts
frontend/src/lib/: AuthContext.tsx  contrast.test.ts  contrast.ts  i18n.test.ts  i18n.ts  notifications.tsx  progress-context.tsx  stepColors.test.ts  stepColors.ts  tauri.test.ts  tauri.ts  telemetry.ts  theme.tsx  use-now.ts  useAuth.ts  useConnectedPlatforms.ts  (+4 more)
infra/glitchtip/: .env.example  README.md  docker-compose.yml
license-server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
license-server/app/: config.py  crypto.py  db.py  email.py  main.py  rate_limit.py
license-server/app/routes/: activate.py  admin.py  checkout.py  portal.py  updates.py  webhook.py
marketing/: Dockerfile  docker-compose.yml  nginx.conf
marketing/public/: acceptable-use.html  account.html  download.html  impressum.html  index.html  install.ps1  install.sh  pricing.html  privacy.html  robots.txt  sitemap.xml  terms.html  thank-you.html
migrations/: _helpers.py  env.py  script.py.mako
migrations/versions/: 001_initial_schema.py  002_quality_upgrade.py  003_edge_tts_and_keywords.py  004_scene_mode.py  005_audiobooks.py  006_audiobook_upgrade.py  007_youtube.py  008_voice_gender.py  009_api_key_store.py  010_audiobook_chapter_metadata.py  010b_create_scheduled_posts.py  011_multi_channel_support.py  012_add_longform_support.py  013_scheduled_posts_composite_index.py  014_content_quality.py  015_license_state.py  016_missing_tables_and_columns.py  017_license_jwt_key_version.py  018_generation_jobs_composite_index.py  019_episode_error_message.py  020_voice_profile_comfyui_elevenlabs.py  021_ab_tests.py  022_job_token_usage.py  023_voice_language_code.py  024_users_team_mode.py  025_assets_library.py  026_video_edit_sessions.py  027_character_style_locks.py  028_social_account_metadata.py  029_character_packs.py  030_facebook_platform.py  031_audiobook_track_mix.py  032_audiobook_settings_json.py  033_audiobook_job_state.py  034_audiobook_render_plan.py  035_episodes_created_at_index.py  036_media_assets_check_and_indexes.py  037_audiobooks_status_index.py  038_scheduled_posts_channel_index.py  039_series_content_format_index.py  (+11 more)
scripts/: _parametrize_generics.py  _strip_unused_ignores.py  diagnose_media.py  fetch_sidecars.py  flip_pending_privacy.py  gen_placeholder_icon.py  repair_media.py  set-release-secrets.ps1
src/drevalis/: __main__.py  main.py
tauri/: package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/permissions/autogenerated/: check_for_channel.toml  install_for_channel.toml  restart_backend.toml
tauri/src-tauri/src/: main.rs
tests/: conftest.py
tests/integration/: test_api_episodes.py  test_api_series.py
tests/unit/: test_ab_test_winner_job.py  test_ab_tests_route.py  test_api_key_store_and_series_repo.py  test_api_keys_route.py  test_assets_route.py  test_audiobook_cache.py  test_audiobook_cancellation.py  test_audiobook_chapter_detection.py  test_audiobook_character_detection.py  test_audiobook_chunking.py  test_audiobook_concat.py  test_audiobook_concurrency.py  test_audiobook_ducking.py  test_audiobook_export.py  test_audiobook_finalize_result.py  test_audiobook_helpers.py  test_audiobook_id3.py  test_audiobook_initialize_call_state.py  test_audiobook_job_state.py  test_audiobook_loudness.py  test_audiobook_mix.py  test_audiobook_render_plan.py  test_audiobook_reshape_dag.py  test_audiobook_resolution_helpers.py  test_audiobook_run_captions_phase.py  test_audiobook_run_concat_phase.py  test_audiobook_run_image_phase.py  test_audiobook_run_master_mix.py  test_audiobook_run_mp3_export_phase.py  test_audiobook_run_music_phase.py  test_audiobook_run_tts_phase.py  test_audiobook_run_video_phase.py  test_audiobook_script_async.py  test_audiobook_script_text.py  test_audiobook_settings.py  test_audiobook_settings_and_mix.py  test_audiobook_voice_blocks.py  test_audiobook_worker_job.py  test_audiobooks_route.py  test_audiobooks_route_part2.py  (+131 more)
(+518 files in other folders)
