[project]
name = "drevalis-license-server"
version = "0.1.0"
description = "License issuance + Stripe billing for self-hosted Drevalis Creator Studio installs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "stripe>=11.4.0",
    # CVE-2024-53861 audience-bypass fix only lands in 2.10.1+.
    "pyjwt[crypto]>=2.10.1",
    "cryptography>=44.0.0",
    "aiosqlite>=0.20.0",
    "structlog>=24.4.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
