[package]
name = "drevalis-shell"
version = "0.1.0-alpha.85"
description = "Tauri shell for Drevalis Creator Studio."
authors = ["Drevalis"]
edition = "2021"
rust-version = "1.77"

# This default-binary stanza is what tauri-cli looks for; the binary
# name matches Cargo's [[bin]] convention.
[[bin]]
name = "drevalis-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon enables system-tray support; the BRIEF's GOTCHAS section
# requires window-close to hide-to-tray rather than terminate the
# worker mid-generation, so the tray menu is the only way back in.
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Crash telemetry. ``default-features = false`` drops the heavy
# ``backtrace`` / ``contexts`` features we don't need; ``panic`` keeps
# the panic-hook integration which is the entire reason this crate is
# here — native Tauri panics now show up in the dashboard alongside
# Python backend errors. DSN is read at *compile time* via the
# ``DREVALIS_TELEMETRY_DSN`` env var so CI release builds embed the
# production DSN while dev builds stay quiet.
sentry = { version = "0.48", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
] }

[features]
# This feature is used to enable Tauri's custom protocol on Windows
# (improves performance versus the legacy http:// scheme).
custom-protocol = ["tauri/custom-protocol"]

# Release profile tuned for **CI build wall-clock** rather than
# squeezing every last byte. The previous full-LTO + codegen-units=1
# setup added ~6 min to every alpha build for a few percent of size
# savings — not worth it at this stage. Thin-LTO + parallel codegen
# cuts the cargo step roughly in half while still stripping debug
# info and aborting on panic to keep the binary tight. Revisit when
# we're shipping public 1.0 releases.
[profile.release]
codegen-units = 16
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
